--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaisen</title>
-    <link rel="website icon" type="png" href="/img/9584557.png">
-    <link rel="stylesheet" href="/home.css">
+    <link rel="website icon" type="png" href="img/9584557.png">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
